# edn-parser

./: .gitignore  Cargo.toml  build.rs  test.edn
src/: edn.llw  lexer.rs  lib.rs  main.rs  parser.rs
tests/: error_cases.rs  mod.rs  special_chars.rs
tests/snapshots/: error_cases__float_denom_rational_not_supported.snap  error_cases__unterminated_string.snap  r#mod__bool_false.snap  r#mod__bool_true.snap  r#mod__comment.snap  r#mod__discard_simple.snap  r#mod__discard_vector_elements.snap  r#mod__error_cases__float_num_rational_not_supported.snap  r#mod__error_cases__unterminated_string.snap  r#mod__float.snap  r#mod__inst_plus_zpne.snap  r#mod__inst_sub_zpne.snap  r#mod__inst_z.snap  r#mod__int.snap  r#mod__keyword.snap  r#mod__list_random_types.snap  r#mod__map_random_types.snap  r#mod__namespace_keyword.snap  r#mod__neg_float.snap  r#mod__neg_int.snap  r#mod__newline_char.snap  r#mod__nil.snap  r#mod__rational.snap  r#mod__rational2.snap  r#mod__set_random_types.snap  r#mod__simple_char.snap  r#mod__single_keyword.snap  r#mod__special_chars__newline.snap  r#mod__special_chars__non_unicode_long_err.snap  r#mod__special_chars__random.snap  r#mod__special_chars__random_err.snap  r#mod__special_chars__return_char.snap  r#mod__special_chars__space.snap  r#mod__special_chars__tab.snap  r#mod__special_chars__unicode.snap  r#mod__string.snap  r#mod__symbol.snap  r#mod__symbol.snap.new  r#mod__tagged_collection.snap  r#mod__uuid.snap  (+8 more)
