[package]
name = "edn-parser"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
logos = "0.15"
codespan-reporting = {version = "0.12", features = ["serialization"] }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"

[dev-dependencies]
insta = { version = "1.43.1", features = [] }
serde_json = "1.0"

[build-dependencies]
lelwel = "0.8.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
missing_docs = { level = "deny" }

[lints.clippy]
all = { level = "deny", priority = 6 }
pedantic = { level = "warn", priority = 5 }
nursery = { level = "warn", priority = 4 }
similar_names = { level = "allow", priority = 11 }
use_self = { level = "allow", priority = 11 }
wildcard_imports = { level = "allow", priority = 11 }
many_single_char_names = { level = "allow", priority = 11 }
range_plus_one = { level = "allow", priority = 11 }
missing_const_for_fn = { level = "deny" }
option_if_let_else = { level = "deny" }
or_fun_call = { level = "deny" }